# flir_boson_usb

./: CMakeLists.txt  package.xml
cfg/: BosonCamera.cfg
example_calibrations/: Boson320.yaml
include/: BosonCamera.hpp  BosonLifeCycle.hpp  flir_boson_usb_component.hpp
include/flir_boson_usb/: BosonCamera.h
launch/: boson_demo.py  flir_boson_320.launch
src/: BosonCamera.cpp  BosonLifeCycle.cpp  demo.cpp  flir_boson_usb_component.cpp  flir_boson_usb_node.cpp
src/nodelets/: BosonCamera.cpp
